content/nomad/v2.0.x/content/tools/autoscaling/agent/nomad.mdx
---
layout: docs
page_title: nomad Block - Nomad Autoscaler Agent Configuration
description: >-
  The "nomad" block configures the Nomad Autoscaler's Nomad client.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-02-16T16:54:40.000Z
last_modified: 2026-02-16T16:54:40.000Z
# END AUTO GENERATED METADATA
---

# `nomad` Block

<Placement groups={['nomad']} />

The `nomad` block configures the Nomad Autoscaler's Nomad client.

```hcl
nomad {
  address   = "http://my-nomad.systems:4646"
  namespace = ["default", "prod"]
}
```

## `nomad` Parameters

- `address` `(string: "http://127.0.0.1:4646")` - The address of the Nomad server
  in the form of `protocol://addr:port`.

- `region` `(string: "global")` - The region of the Nomad servers to connect with.

- `namespace` `(list: [])` - The Nomad namespaces to monitor for scaling
  policies. Accepts exact namespace names or `"*"` to monitor all namespaces.
  When a single namespace is provided, the autoscaler restricts all Nomad API
  queries to that namespace. When multiple namespaces are provided, policies
  are listed across all namespaces and filtered locally. Specify `["*"]` to
  monitor all namespaces. If `"*"` appears alongside other entries, it takes
  precedence and all namespaces are monitored.

- `token` `(string: "")` - The SecretID of an ACL token to use to authenticate
  API requests with.

- `http_auth` `(string: "")` - The authentication information to use when connecting
  to a Nomad API which is using HTTP authentication.

- `ca_cert` `(string: "")` - Path to a PEM encoded CA cert file to use to verify
  the Nomad server SSL certificate.

- `ca_path` `(string: "")` - Path to a directory of PEM encoded CA cert files to
  verify the Nomad server SSL certificate.

- `client_cert` `(string: "")` - Path to a PEM encoded client certificate for TLS
  authentication to the Nomad server.

- `client_key` `(string: "")` - Path to an unencrypted PEM encoded private key
  matching the client certificate.

- `tls_server_name` `(string: "")` - The server name to use as the SNI host when
  connecting via TLS.

- `skip_verify` `(bool: false)` - Do not verify TLS certificates. This is strongly
  discouraged.

- `block_query_wait_time` `(string: "5m")` - How long applicable Nomad API
  requests supporting blocking queries are held open. Defaults to `5m`.
